--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,52 @@
 @import 'base';
 @import 'menu';
 
-// * {
-// 	box-sizing: border-box;
-// }
+body {
+	background: $background-color;
+	color: $text-color;
+	height: 100%;
+	margin: 0;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	line-height: 1.5;
+}
+
+#contact {
+	.boxes {
+		border-radius: 5px;
+		background-color: #f2f2f2;
+		padding: 20px;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+		transition: 0.3s;
+
+		:hover {
+			// box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+		}
+
+		input[type='text'],
+		select,
+		textarea {
+			width: 90%; /* Full width */
+			padding: 12px; /* Some padding */
+			border: 1px solid #ccc; /* Gray border */
+			border-radius: 4px; /* Rounded borders */
+			box-sizing: border-box; /* Make sure that padding and width stays in place */
+			margin-top: 6px; /* Add a top margin */
+			margin-bottom: 16px; /* Bottom margin */
+			resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+		}
+
+		/* Style the submit button with a specific background color etc */
+		input[type='submit'] {
+			background-color: $accent-color;
+			color: white;
+			padding: 12px 20px;
+			border: none;
+			border-radius: 4px;
+			cursor: pointer;
+		}
+
+		input[type='submit']:hover {
+			background-color: $accent-highlight;
+		}
+	}
+}
