Create post.html & format footer

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,5 +1,5 @@
 $text_color: #222;
-$background-color: #ffffff;
+$background-color: #eeeeee;
 $accent-color: #e2c12e;
 $accent-highlight: #d4b32d;
 $dark-mode: false;
