--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -16,8 +16,12 @@
 	}
 }
 
+.post-menu .menu-btn {
+	visibility: hidden;
+}
+
 .menu-btn {
-	position: absolute;
+	position: fixed;
 	z-index: 3;
 	right: 35px;
 	top: 35px;
