--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,48 @@
 @import 'base';
 @import 'menu';
 
+.card {
+	margin: 2%;
+	margin-right: 8%;
+	margin-top: 7%;
+	margin-bottom: 6%;
+	// margin-top: 7%;
+	background: #fff;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	transition: 0.6s;
+
+	h2 {
+		// padding: 5%;
+	}
+
+	.container {
+		padding: 2px 16px;
+	}
+}
+
+.navbar {
+	background-color: #333;
+	position: fixed;
+	top: 0px;
+	width: 100%;
+	height: 6%;
+	transition: top 0.6s;
+
+	a {
+		float: left;
+		display: block;
+		color: white;
+		text-align: center;
+		padding: 15px;
+		text-decoration: none;
+
+		&:hover {
+			background-color: #ddd;
+			color: black;
+		}
+	}
+}
+
 body {
 	background: $background-color;
 	color: $text-color;
@@ -49,4 +91,16 @@ body {
 			background-color: $accent-highlight;
 		}
 	}
+}
+
+#main-footer {
+	position: relative;
+	bottom: 0;
+	width: 100%;
+	height: 5%;
+
+	text-align: center;
+	// padding: 1rem;
+	background: darken($color: #333, $amount: 10);
+	color: #eee;
 }
