--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,4 +1,10 @@
 @media screen and (max-width: 440px) {
+	.home {
+		margin-right: 30%;
+	}
+	.card {
+		margin-right: 8%;
+	}
 	.menu-btn {
 		right: 10px;
 		top: 50%;
@@ -37,7 +43,7 @@
 		}
 
 		&.show {
-			width: 30%;
+			width: 25%;
 		}
 	}
 
@@ -65,6 +71,9 @@
 	// 			}
 	// 		}
 	// 	}
+	.home {
+		margin-right: 175px;
+	}
 	.menu-nav {
 		height: 110%;
 		.menu-branding {
@@ -133,5 +142,9 @@
 		}
 	}
 }
-@media screen and (min-width: 1444px) {
+@media screen and (min-width: 1301px) and (max-width: 1600px) {
+	.menu-nav .menu-branding .portrait {
+		width: 125px;
+		height: 125px;
+	}
 }
