--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,17 +6,9 @@
 	margin-right: 8%;
 	margin-top: 7%;
 	margin-bottom: 6%;
-	// margin-top: 7%;
 	background: $card-background-color;
 	box-shadow: 4px 4px 4px 6px rgba(0, 0, 200, 0.2);
-	// box-shadow: 4px 4px 4px 4px rgba($accent-color, 0.5);
-	// box-shadow: 4px 4px 4px 4px rgba(0, 0, 255, 0.2);
-	// box-shadow: 4px 4px 4px 4px rgba(12, 255, 255, 0.5);
 	transition: 0.6s;
-
-	h2 {
-		// padding: 5%;
-	}
 
 	.container {
 		padding: 2px 16px;
@@ -57,11 +49,8 @@ body {
 	h1 {
 		position: sticky;
 		top: 0;
-		// background: #00006d28;
 		background: #c8c8d9;
 		color: $text-color;
-		// background: $menu-background-color;
-		// color: $accent-color;
 		border-top: 2px $text-color solid;
 		border-bottom: 2px $text-color solid;
 		padding: 1.5rem 2.5rem;
@@ -74,7 +63,6 @@ body {
 		h1,
 		h2,
 		h3 {
-			// color: #007;
 			color: $text-color;
 		}
 		a {
@@ -95,24 +83,19 @@ body {
 		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 		transition: 0.3s;
 
-		:hover {
-			// box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-		}
-
 		input[type='text'],
 		select,
 		textarea {
-			width: 90%; /* Full width */
-			padding: 12px; /* Some padding */
-			border: 1px solid #ccc; /* Gray border */
-			border-radius: 4px; /* Rounded borders */
-			box-sizing: border-box; /* Make sure that padding and width stays in place */
-			margin-top: 6px; /* Add a top margin */
-			margin-bottom: 16px; /* Bottom margin */
-			resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+			width: 90%;
+			padding: 12px;
+			border: 1px solid #ccc;
+			border-radius: 4px;
+			box-sizing: border-box;
+			margin-top: 6px;
+			margin-bottom: 16px;
+			resize: vertical;
 		}
 
-		/* Style the submit button with a specific background color etc */
 		input[type='submit'] {
 			background-color: $accent-color;
 			color: white;
@@ -135,7 +118,6 @@ body {
 	height: 5%;
 
 	text-align: center;
-	// padding: 1rem;
 	background: darken($color: #333, $amount: 10);
 	color: #eee;
 }
