Format HTML posts, Update home & posts pages

--- a/template/post.mustache
+++ b/template/post.mustache
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<link rel="stylesheet" href="/dist/css/main.css" />
-		<title>Welcome from François Rice</title>
+		<link rel="stylesheet" href="css/main.css" />
+		<title>Post from François Rice</title>
 	</head>
 
 	<body class="post-menu">
@@ -17,17 +17,17 @@
 			</div>
 			<ul id="mySidenav" class="menu-nav">
 				<div class="menu-branding">
-					<a href="/dist/home.html" class="nav-link">
+					<a href="home.html" class="nav-link">
 						<img class="portrait" src="img/headshot_bw.png" />
 					</a>
 				</div>
 				<li class="nav-item current">
-					<a href="/dist/home.html" class="nav-link">
+					<a href="home.html" class="nav-link">
 						Home
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="/dist/post.html" class="nav-link">
+					<a href="post.html" class="nav-link">
 						Posts
 					</a>
 				</li>
@@ -35,23 +35,16 @@
 		</div>
 
 		<div class="navbar">
-			<a href="/dist/home.html" class="nav-link">
+			<a href="home.html" class="nav-link">
 				<div class="portrait"></div>
 			</a>
-			<a href="/dist/home.html">Home</a>
+			<a href="home.html">Home</a>
 		</div>
 
 		<main class="post">
 			<div class="card">
 				<div class="container">
-					<h2 id="welcome"><strong>Welcome</strong></h2>
-					<p>
-						Hi, I'm François. A web and mobile developer. I focus mostly on
-						coding in React and React Native, with Nodejs or Python backends.
-						This blog shares the knowledge I've gained from my experiences and
-						can hopefully lead you away from the pitfalls that I've fallen into.
-					</p>
-					<p>Thanks for stopping by, and I hope you enjoy what you find.</p>
+					{{{post}}}
 				</div>
 			</div>
 		</main>
@@ -61,7 +54,7 @@
 			<br />
 		</footer>
 
-		<script src="/dist/js/main.js"></script>
-		<script src="/dist/js/post.js"></script>
+		<script src="js/main.js"></script>
+		<script src="js/post.js"></script>
 	</body>
 </html>
